# deepgram-push-to-talk-windows

./: .env.example  .gitignore  README.md  README.ru.md  app_bootstrap.py  build.ps1  install.ps1  pyproject.toml  run.ps1
.github/workflows/: ci.yml
src/deepgram_stt/: __init__.py  app.py  audio.py  config.py  deepgram_client.py  main.py  pending_store.py  text_output.py
tests/: test_app.py  test_audio.py  test_config.py  test_deepgram_client.py  test_pending_store.py  test_text_output.py
